; Copyright 2021 Johannes Reiff
; SPDX-License-Identifier: Apache-2.0

[metadata]
name = mfptlib
author = Johannes Reiff
author_email = johannes.reiff@itp1.uni-stuttgart.de
description = A library for calculating mean first-passage times.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/joreiff/mfptlib
license = Apache-2.0
license_files =
	LICENSE
	NOTICE
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Chemistry
	Programming Language :: C++
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3 :: Only
	Operating System :: POSIX :: Linux

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
install_requires =
	numpy >=1.22,<2

[options.extras_require]
dev =
	compdb >=0.2
	pytest >=7.0
	scipy >=1.8,<2
	sphinx >=5.0,<6
	sphinx-rtd-theme >=1.0,<2
